# grasp_zy

./: .gitignore  AGENTS.md  AGENTS_old.txt  README.md  RM_control  RunGrasp.sh  camera(2).py  camera.py  config.py  ctu_conn.py  ctu_protocol.md  ctu_protocol.py  design.md  design.zh.md  grasp_zy_zhiyuan1215.py  grasp_zy_zhiyuan1230.py  gripper_zhiyuan.py  requirements.txt  requirements_graspnet.txt  test.py
.sisyphus/plans/: ros2-refactor-implementation.md
Ros2/: ARCHITECTURE.md  COMPARISON.md  FILE_STRUCTURE.md  GRASP_TEST_GUIDE.md  INSTALL_ROS2.md  QUICKSTART.md  README.md  TEST_GUIDE.md  TEST_REAL_CAMERA.md  build.sh  check_dependencies.py  fix_detection.md  install_service.sh  ros2_grasp.service  setup_env.sh
Ros2/env_/: env_.txt
Ros2/examples/: grasp_client.py  test_services.py
Ros2/grasp_bringup/: CMakeLists.txt  package.xml
Ros2/grasp_bringup/config/: grasp_params.yaml
Ros2/grasp_bringup/launch/: grasp_system.launch.py  test_mock_system.launch.py  vision_only.launch.py
Ros2/grasp_control/: package.xml  setup.cfg  setup.py
Ros2/grasp_control/grasp_control/: arm_controller.py  gripper_server.py  mock_arm_controller.py  mock_gripper_server.py
Ros2/grasp_interfaces/: CMakeLists.txt  package.xml
Ros2/grasp_interfaces/action/: ExecuteGrasp.action
Ros2/grasp_interfaces/msg/: DetectionResult.msg  GraspPose.msg
Ros2/grasp_interfaces/srv/: DetectObjects.srv  GenerateGrasp.srv  GripperControl.srv
Ros2/grasp_main/: package.xml  setup.cfg  setup.py
Ros2/grasp_main/grasp_main/: grasp_executor.py
Ros2/grasp_vision/: package.xml  setup.cfg  setup.py
Ros2/grasp_vision/grasp_vision/: camera_node.py  detection_server.py  grasp_generator.py  mock_camera_node.py
Ros2/tests/: test_camera_display.py  test_detection.py  test_grasp_generation.py  test_image_topics.py  test_interface.py  test_mock_services.py  test_real_camera.py
Test/Code/: ANN.py  RoboticArm.py  RoboticGripper.py  test_detection.py
doc/: single_new.txt
graspnet-baseline/: AGENTS.md  GRASPNET_6D_INTEGRATION.md  GRASPNET_INTEGRATION.md  ScreenCamera_2025-11-19-14-57-24.json  compare_data.py  demo copy 2.1.py  demo copy 2.py  demo.py  demo_init.py  generate_object_mask.py  grasp_zy_zhiyuan0828.py  graspnet_wrapper.py  graspnet_wrapper_6d.py  scipy2.py  scri.py  tiff.py  workspace_mask.py
graspnetAPI/docs/: =4.0.0  requirements.txt
models/: genotypes.py  nms.py
models/gqcnn_server/: VGG_replace.py  augment_cells.py  augment_cnn.py  ops.py
others/: grasp_zy_zhiyuan08281.py  onnx_opyimize.py  single_rgb.txt  single_zy.txt  tensorrt_infer.py  test.py  torch2onxx.py  trajectory_plan.py
plans/: ctu_protocol_presentation.md
prepare/Cornelldataset/: cornell2yolo.py  new.py  split.py  zy2yolo.py
requiments/: quick_install_py310.md  requirements.txt  requirements310.txt
robotic_arm_package/: AGENTS.md  linux_arm_base_release_v4.3.2.tar.bz2
utils/: cornell_data.py  datasets.py  utils.py
utils/data/: cornell_data.py  cornell_data1.py  grasp_data.py
utils/dataset_processing/: evaluation.py  generate_cornell_depth.py  grasp.py
(+33 files in other folders)
