<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grasp_bringup</name>
  <version>1.0.0</version>
  <description>抓取系统启动文件和配置</description>
  <maintainer email="jet@zoneyung.com">jet</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>grasp_interfaces</exec_depend>
  <exec_depend>grasp_vision</exec_depend>
  <exec_depend>grasp_control</exec_depend>
  <exec_depend>grasp_main</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

